--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "grunt-contrib-jshint": "~0.10.0",
     "browserify": "~7.0.3",
     "grunt-browserify": "~3.2.1",
-    "grunt-contrib-uglify": "~0.6.0"
+    "grunt-contrib-uglify": "~0.6.0",
+    "request": "~2.51.0"
   },
   "engines": {
     "node": ">= 0.10.0"
